<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_title"
        style="@style/TextTitle"
        android:layout_marginTop="8dp"
        android:text="@string/app_name" />

    <LinearLayout
        android:id="@+id/lay_search"
        style="@style/LinearMatchHorizontal"
        android:layout_below="@id/txt_title">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/box_search_country"
            android:textCursorDrawable="@null"
            app:actionViewClass="android.widget.SearchView"
            app:iconifiedByDefault="false"
            app:queryBackground="@null"
            app:queryHint="Cari Negara" />

        <Button
            android:id="@+id/btn_sequence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp2"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginEnd="@dimen/dp2"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_weight="5"
            android:background="@drawable/ic_sequence" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_globe"
        style="@style/LinearMatchHorizontal"
        android:layout_below="@+id/lay_search"
        android:background="@drawable/bg_purple">

        <LinearLayout style="@style/LinearTextVertical">

            <TextView
                style="@style/TextDataKind"
                android:text="@string/confirmed" />

            <TextView
                android:id="@+id/txt_confirmed_glode"
                style="@style/TextDataCount"
                android:text="@string/dash" />
        </LinearLayout>

        <LinearLayout style="@style/LinearTextVertical">

            <TextView
                style="@style/TextDataKind"
                android:text="@string/recovered" />

            <TextView
                android:id="@+id/txt_recovered_globe"
                style="@style/TextDataCount"
                android:text="@string/dash" />
        </LinearLayout>

        <LinearLayout style="@style/LinearTextVertical">

            <TextView
                style="@style/TextDataKind"
                android:text="@string/deaths" />

            <TextView
                android:id="@+id/txt_deaths_glode"
                style="@style/TextDataCount"
                android:text="@string/dash" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_header"
        style="@style/LinearMatchHorizontal"
        android:layout_below="@id/lay_globe"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginEnd="@dimen/dp16"
        android:background="@drawable/bg_header_gray">

        <TextView
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            style="@style/TextHeader"
            android:layout_weight="4"
            android:text="@string/countries" />

        <TextView
            style="@style/TextHeader"
            android:layout_weight="5"
            android:text="@string/cases" />

        <TextView
            style="@style/TextHeader"
            android:layout_weight="5"
            android:text="@string/recovered" />

        <TextView
            style="@style/TextHeader"
            android:layout_weight="5"
            android:text="Deaths" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_header"
        android:layout_marginTop="@dimen/dp4"
        android:layout_marginBottom="@dimen/dp4">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_country"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/list_country" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>