<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChartCountryActivity">

    <!--    region collection card-->
    <LinearLayout
        style="@style/LinearDataChart"
        android:layout_margin="@dimen/dp8"
        android:background="@drawable/bg_header_gray"
        android:orientation="vertical"
        android:padding="@dimen/dp8">

        <LinearLayout
            style="@style/CardLinearHorizontal"
            tools:ignore="NestedWeights">

            <ImageView
                android:id="@+id/img_flag_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher_background"
                tools:ignore="NestedWeights" />

            <androidx.cardview.widget.CardView style="@style/CardDataCovid">

                <LinearLayout style="@style/LinearTextCurrentData">

                    <TextView
                        android:id="@+id/txt_country_chart"
                        style="@style/TextTitleCard"
                        android:text="@string/country_name" />

                    <TextView
                        android:id="@+id/txt_current"
                        style="@style/TextSubTitleCard"
                        android:text="@string/currently" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            style="@style/CardLinearHorizontal"
            tools:ignore="NestedWeights">

            <androidx.cardview.widget.CardView
                style="@style/CardDataCovid"
                app:cardBackgroundColor="@color/orange">

                <LinearLayout style="@style/LinearTextCurrentData">

                    <TextView
                        style="@style/TextSubTitleCard"
                        android:text="@string/total_confirmed"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/txt_total_confirmed_current"
                        style="@style/TextTitleCard"
                        android:text="@string/currently"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardDataCovid"
                app:cardBackgroundColor="@color/peach">

                <LinearLayout style="@style/LinearTextCurrentData">

                    <TextView
                        style="@style/TextSubTitleCard"
                        android:text="@string/new_confirmed"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/txt_new_confirmed_current"
                        style="@style/TextTitleCard"
                        android:text="@string/currently"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            style="@style/CardLinearHorizontal"
            tools:ignore="NestedWeights">

            <androidx.cardview.widget.CardView
                style="@style/CardDataCovid"
                app:cardBackgroundColor="@color/yellow">

                <LinearLayout style="@style/LinearTextCurrentData">

                    <TextView
                        style="@style/TextSubTitleCard"
                        android:text="@string/total_deaths"
                        android:textColor="@color/red" />

                    <TextView
                        android:id="@+id/txt_total_deaths_current"
                        style="@style/TextTitleCard"
                        android:text="@string/currently"
                        android:textColor="@color/red" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardDataCovid"
                app:cardBackgroundColor="@color/lime">

                <LinearLayout style="@style/LinearTextCurrentData">

                    <TextView
                        style="@style/TextSubTitleCard"
                        android:text="@string/new_deaths"
                        android:textColor="@color/red" />

                    <TextView
                        android:id="@+id/txt_new_deaths_current"
                        style="@style/TextTitleCard"
                        android:text="@string/currently"
                        android:textColor="@color/red" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            style="@style/CardLinearHorizontal"
            tools:ignore="NestedWeights">

            <androidx.cardview.widget.CardView
                style="@style/CardDataCovid"
                app:cardBackgroundColor="@color/tosca">

                <LinearLayout style="@style/LinearTextCurrentData">

                    <TextView
                        style="@style/TextSubTitleCard"
                        android:text="@string/total_recovered"
                        android:textColor="@color/red" />

                    <TextView
                        android:id="@+id/txt_total_recovered_current"
                        style="@style/TextTitleCard"
                        android:text="@string/currently"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardDataCovid"
                app:cardBackgroundColor="@color/light_tosca">

                <LinearLayout style="@style/LinearTextCurrentData">

                    <TextView
                        style="@style/TextSubTitleCard"
                        android:text="@string/new_recovered"
                        android:textColor="@color/red" />

                    <TextView
                        android:id="@+id/txt_new_recovered_current"
                        style="@style/TextTitleCard"
                        android:text="@string/currently"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>
    <!--endregion-->

    <!--    region chart-->
    <LinearLayout
        style="@style/LinearDataChart"
        android:layout_margin="@dimen/dp8"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp8" />
    </LinearLayout>
    <!--    endregion-->
</LinearLayout>