<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/vertical_margin_card_data"
        android:layout_marginTop="@dimen/vertical_card"
        android:layout_marginEnd="@dimen/vertical_margin_card_data"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_elevation"
        app:contentPadding="@dimen/vertical_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countries"
                android:textSize="@dimen/data_card"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/vertical_card"
                android:orientation="horizontal"
                android:weightSum="3"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/cases"
                        android:textSize="@dimen/title_item" />

                    <TextView
                        android:id="@+id/txt_total_case"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_card"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:text="@string/dummy_data"
                        android:textSize="@dimen/data_card"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/recovered"
                        android:textSize="@dimen/title_item" />

                    <TextView
                        android:id="@+id/txt_total_recovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp8"
                        android:layout_marginTop="@dimen/vertical_card"
                        android:layout_marginRight="@dimen/dp8"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:text="@string/dummy_data"
                        android:textSize="@dimen/data_card"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/deaths"
                        android:textSize="@dimen/title_item" />

                    <TextView
                        android:id="@+id/txt_total_death"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_card"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:text="@string/dummy_data"
                        android:textSize="@dimen/data_card"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>